# C-ML-Sandbox_2

./: AppExceptions.h  CMakeLists.txt  Dataset.cpp  Dataset.h  DatasetInitiator.cpp  DatasetInitiator.h  DatasetLoader.cpp  DatasetLoader.h  Experiment.cpp  Experiment.h  History.h  Interfata.cpp  Interfata.h  KNN.cpp  KNN.h  LinearRegression.cpp  LinearRegression.h  Model.cpp  Model.h  ModelFactory.cpp  ModelFactory.h  README.md  Sample.cpp  Sample.h  main.cpp
examples/: linear_regression_demo.cpp
examples/linear_regression/: test  train
